--- a/src/App.css
+++ b/src/App.css
@@ -15,15 +15,17 @@
   --off-black: hsl(0, 0%, 8%);
 }
 
-html, body, main {
+html,
+body,
+main {
   width: 100vw;
+  overflow-x: hidden;
   height: 100%;
-  min-height: 100vh;
 }
 
 body {
   color: var(--off-black);
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   background-color: var(--off-white);
 }
 
@@ -80,7 +82,7 @@ main {
   color: var(--off-black);
   font-size: 20px;
   font-weight: 800;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
 }
 
 .birthday--number:hover {
